--- a/css/style.css
+++ b/css/style.css
@@ -1,279 +1,117 @@
-/*This stylesheet contains some custom class rather than Bootstrap*/
-		
-a.brand img {
-	border-radius:50%;
-	border:5px solid #fff;
-}
-.profile, .skills, .work, .resume {
-	padding:30px 0;
-}
-.profile h2, .skills h2, .work h2, .resume h2 {
-	font-weight:normal;
-	color: #39D084;
-}
-/***** Profile *****/
-	.profile h1 {
-	color:#39d084;
-	font-weight: normal;
-}
-.profile h3 {
-	color:#fff;
-	font-weight: normal;
-}
-.profile p {
-	color:#fff;
-	font-size:18px;
-	line-height: 35px;
-	margin-top: 30px;
-}
-.profile .container .span5 {
-	padding:40px 0;
-}
-a.hire-me {
-	display: inline-block;
- *display: inline;
-	padding:20px 60px;
-	background:#39d084;
-	color:#fff;
-	text-transform:uppercase;
-	font-size:26px;
-	margin:20px 0;
-	-webkit-border-radius: 40px;
-	-moz-border-radius: 40px;
-	border-radius: 40px;
-}
-a.hire-me:hover {
-	text-decoration:none;
-	background:#11d170;
-}
-.social {
-	text-align:center;
-	padding-bottom:80px;
-}
-ul.social-icons {
-	margin:20px 0;
-}
-ul.social-icons li {
-	list-style:none;
-	display:inline-block;
-	margin:10px;
-}
-ul.social-icons li:first-child {
-	margin-left:0;
-}
-ul.social-icons li a {
-	opacity:0.8;
-}
-ul.social-icons li a:hover {
-	opacity:1;
-}
-/***** Skills *****/
-.skills .span3 {
-	width:235px;
-	overflow: hidden;
-}
-.skills .span5 {
-	text-align:left;
-	padding:47px 0;
-}
-.skills .ps, .skills .ai, .skills .html, .skills .css {
-	padding:25px;
-	width:100px;
-	height:100px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	text-align:center;
-	border:8px solid #203748;
-	float:right;
-	-webkit-transition: all 0.2s linear;
-	-moz-transition: all 0.2s linear;
-	-o-transition: all 0.2s linear;
-	transition: all 0.2s linear;
-}
-.skills .ps {
-	background:#30a5dc;
-}
-.skills .ai {
-	background:#ee742b;
-}
-.skills .html {
-	background:#f04949;
-}
-.skills .css {
-	background:#39d084;
-}
-.skills .ps:hover, .skills .ai:hover, .skills .html:hover, .skills .css:hover {
-	border:8px solid #fff;
-}
-.skills .ps h3, .skills .ai h3, .skills .html h3, .skills .css h3 {
-	color:#fff;
-	font-size: 3.4em;
-	font-weight: normal;
-	line-height: 80px;
-}
-.skills .html h3, .skills .css h3 {
-	font-size: 2.2em;
-}
-.expand-bg {
-	background: none repeat scroll 0 0 #EAEDF2;
-	border-radius:16px;
-	height: 16px;
-	margin-bottom: 15px;
-	position: relative;
-	padding: 0 2px;
-}
-.expand {
-	border-radius: 10px;
-	height: 4px;
-	margin: 2px 0;
-	padding: 4px 0 4px 5px;
-	position: absolute;
-}
-.skills .span5 h3 {
-	font-size: 18.5px;
-	line-height: 15px;
-	font-weight:normal;
-	text-transform:uppercase;
-}
-.skills .span5 h3 span {
-	float:right;
-}
-.ps2 {
-	width:90%;
-	background:#30a5dc;
-	-moz-animation:html5 2s ease-out;
-	-webkit-animation:html5 2s ease-out;
-}
-.ai2 {
-	width:80%;
-	background:#ee742b;
-	-moz-animation:css3 2s ease-out;
-	-webkit-animation:css3 2s ease-out;
-}
-.html2 {
-	width:75%;
-	background:#f04949;
-	-moz-animation:jquery 2s ease-out;
-	-webkit-animation:jquery 2s ease-out;
-}
-.css2 {
-	width:85%;
-	background:#39d084;
-	-moz-animation:photoshop 2s ease-out;
-	-webkit-animation:photoshop 2s ease-out;
-}
- @-moz-keyframes ps2 {
-0% {
-width:0px;
-}
-100% {
-width:90%;
-}
-}
-@-moz-keyframes ai2 {
-0% {
-width:0px;
-}
-100% {
-width:80%;
-}
-}
-@-moz-keyframes html2 {
-0% {
-width:0px;
-}
-100% {
-width:75%;
-}
-}
-@-moz-keyframes css2 {
-0% {
-width:0px;
-}
-100% {
-width:85%;
-}
-}
- @-webkit-keyframes ps2 {
-0% {
-width:0px;
-}
-100% {
-width:90%;
-}
-}
-@-webkit-keyframes ai {
-0% {
-width:0px;
-}
-100% {
-width:80%;
-}
-}
-@-webkit-keyframes html {
-0% {
-width:0px;
-}
-100% {
-width:75%;
-}
-}
-@-webkit-keyframes css {
-0% {
-width:0px;
-}
-100% {
-width:85%;
-}
-}
-/**** Work container *****/
-ul.work-images li {
-	list-style:none;
-	display:inline-block;
-	margin: 8px 10px;
- background:
-}
-ul.work-images li:first-child {
-	margin-left:0;
-}
-ul.work-images li div {
-	background:url(../img/eye.png) 50% 50% no-repeat;
-	background-color: #f04949;
-	-webkit-transition: all 0.2s linear;
-	-moz-transition: all 0.2s linear;
-	-o-transition: all 0.2s linear;
-	transition: all 0.2s linear;
-}
-ul.work-images li img {
-	-webkit-transition: all 0.2s linear;
-	-moz-transition: all 0.2s linear;
-	-o-transition: all 0.2s linear;
-	transition: all 0.2s linear;
-}
-ul.work-images li img:hover {
-	opacity:0.1;
-}
-/***** Resume container *****/
-.resume h3 {
-	margin:60px 0;
-}
-.resume .btn-center {
-	text-align:center;
-}
-.footer {
-	background:#355267;
-	position: fixed;
-	width: 100%;
-	bottom:0;
-}
-.footer p {
-	margin:20px 0;
-}
-.footer p a {
-	color:#fff;
-	text-decoration:none;
-}
-.footer p a:hover {
-	color:#39d084;
+/* Arquivo CSS */
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Garante que a página tenha pelo menos 100% da altura da tela visível */
+    background-color: #040309;
+}
+
+.navbar {
+    background-color: #002D3D;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+
+p {
+    color: white;
+    font-size: 32px;    
+}
+
+.destaque {
+    color: #9F2226;
+    font-size: 60px;
+}
+
+    .navbar ul {
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .navbar ul li a {
+        display: inline-block;
+        padding: 20px;
+        color: white;
+        text-decoration: none;
+    }
+
+        .navbar ul li a:hover {
+            background-color: #9E363D;
+            display: inline-block;
+            padding: 20px;
+            color: white;
+            text-decoration: none;
+        }
+
+.selectedItem {
+    background-color: #9F2226;
+    font-weight: bold;
+}
+
+.footerDiv {
+    background-color: #002D3D;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: auto; /* Empurra o footer para o final da página */
+}
+
+.section1 {
+    margin-top: 150px;
+    height: 400px; /* Defina a altura desejada */
+    padding: 20px; /* Adiciona espaçamento interno */    
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+    .section1 div img {
+        width: 100px; /* Define a largura desejada */
+    }
+
+.section2 div {
+    justify-content: center;
+    display:flex;
+}
+
+    .section2 div img {
+        margin: 25px;
+        width: 65px; /* Define a largura desejada */
+    }
+
+.icon img {
+    transition: transform 0.3s ease-in-out; /* Adiciona uma transição suave */
+}
+
+.icon img:hover {
+        transform: scale(1.2); /* Aumenta o tamanho da imagem em 20% quando o mouse estiver em cima */
+    }
+
+.titulo {
+    color: white;
+    font-size: 3em;
+    letter-spacing: 5px;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+    opacity: 0; /* Começa com a opacidade 0 para esconder o texto */
+    animation: fadeIn 2s ease forwards; /* Inicia a animação quando a página é carregada */
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px); /* Adiciona um efeito de deslize para cima */
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
