--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,17 @@
-/* Arquivo CSS */
-
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #040309;
-    width: auto;
+    font-family: Arial, sans-serif;
 }
 
 .navbar {
     background-color: #002D3D;
-    text-align: center;
-    position: fixed;
-    width: 100%;
-    top: 0;
+    justify-content: center;
+    display: flex;
 }
 
-p {
-    color: white;
-    font-size: 32px;    
-}
-
-.destaque {
-    color: #9F2226;
-    font-size: 60px;
-}
 
     .navbar ul {
         display: flex;
@@ -34,61 +21,80 @@ p {
         padding: 0;
     }
 
-    .navbar ul li a {
-        display: inline-block;
-        padding: 20px;
-        color: white;
-        text-decoration: none;
-    }
-
-        .navbar ul li a:hover {
-            background-color: #9E363D;
+        .navbar ul li a {
             display: inline-block;
             padding: 20px;
             color: white;
             text-decoration: none;
         }
 
+            .navbar ul li a:hover {
+                background-color: #9E363D;
+                display: inline-block;
+                padding: 20px;
+                color: white;
+                text-decoration: none;
+            }
+
 .selectedItem {
     background-color: #9F2226;
     font-weight: bold;
 }
 
-.footerDiv {
-    color: white;
-    padding: 20px 0;
-    margin-top: auto; /* Empurra o footer para o final da página */
-    text-align: center;
-}
-
-.section1 {
-    margin-top: 150px;
-    height: 400px; /* Defina a altura desejada */
-    padding: 20px; /* Adiciona espaçamento interno */    
+main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    flex: 1;
     text-align: center;
-}
-
-.section2 div {
     justify-content: center;
-    display:flex;
-    margin-top: auto; /* Empurra o footer para o final da página */}
-
-    .section2 div img {
-        margin: 25px;
-        width: 65px; /* Define a largura desejada */
-    }
-
-.icon img {
-    transition: transform 0.3s ease-in-out; /* Adiciona uma transição suave */
+    align-items: center;
 }
 
-.icon img:hover {
+.section2 {
+    display: flex;
+    margin: 10px;
+    justify-content: center;
+}
+
+.socialMedia {
+    margin: 30px;
+    width: 80px;
+}
+
+.socialMedia {
+    transition: transform 0.3s ease-in-out;
+}
+
+    .socialMedia:hover {
         transform: scale(1.2); /* Aumenta o tamanho da imagem em 20% quando o mouse estiver em cima */
     }
 
-.titulo {
+    .section p {
+        
+        justify-content: center;
+        align-items: center;
+        font-size: 50px;
+        height: 85%;
+        align-items: center;
+        justify-content: center;
+    }
+
+footer {
+    background-color: #002D3D;
+    height: 50px;
+    text-align: center;
+    align-items: center;
+    color: white;
+}
+
+.titulo {    
     color: white;
     font-size: 3em;
     letter-spacing: 5px;
@@ -97,6 +103,10 @@ p {
     animation: fadeIn 2s ease forwards; /* Inicia a animação quando a página é carregada */
 }
 
+.destaque {
+    color: #9F2226;
+    font-size: 60px;
+}
 
 @keyframes fadeIn {
     from {
@@ -109,104 +119,4 @@ p {
         transform: translateY(0);
     }
 }   
-
-.container {
-  left: calc(50% - 300px);
-  display: flex;
-  justify-content: center;
-  margin-top: 25px;
-}
-
-.card {
-  display: flex;
-  height: 280px;
-  width: 200px;
-  background-color: #17141d;
-  border-radius: 10px;
-  box-shadow: -1rem 0 3rem #000;
-/*   margin-left: -50px; */
-  transition: 0.4s ease-out;
-  position: relative;
-  left: 0px;
-}
-
-.card:not(:first-child) {
-    margin-left: -50px;
-}
-
-.card:hover {
-  transform: translateY(-20px);
-  transition: 0.4s ease-out;
-}
-
-.card:hover ~ .card {
-  position: relative;
-  left: 50px;
-  transition: 0.4s ease-out;
-}
-
-.title {
-  color: white;
-  font-weight: 300;
-  position: absolute;
-  left: 20px;
-  top: 15px;
-}
-
-.bar {
-  position: absolute;
-  top: 100px;
-  left: 20px;
-  height: 5px;
-  width: 150px;
-}
-
-.emptybar {
-  background-color: #2e3033;
-  width: 100%;
-  height: 100%;
-}
-
-.filledbar {
-  position: absolute;
-  top: 0px;
-  z-index: 3;
-  width: 0px;
-  height: 100%;
-  background: rgb(0,154,217);
-  background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
-  transition: 0.6s ease-out;
-}
-
-.card:hover .filledbar {
-  width: 120px;
-  transition: 0.4s ease-out;
-}
-
-.circle {
-  position: absolute;
-  top: 150px;
-  left: calc(50% - 60px);
-}
-
-.stroke {
-  stroke: white;
-  stroke-dasharray: 360;
-  stroke-dashoffset: 360;
-  transition: 0.6s ease-out;
-}
-
-svg {
-  fill: #17141d;
-  stroke-width: 2px;
-}
-
-.card:hover .stroke {
-  stroke-dashoffset: 100;
-  transition: 0.6s ease-out;
-}
-
-.flexContainer{    
-    margin-top: 100px;
-}
 
