--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #040309;
     font-family: Arial, sans-serif;
+    height: 100%;
 }
 
 .navbar {
@@ -11,7 +12,6 @@ body {
     justify-content: center;
     display: flex;
 }
-
 
     .navbar ul {
         display: flex;
@@ -44,23 +44,27 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
+    align-items: center;
 }
 
 .section {
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin: 100px;
     flex: 1;
     text-align: center;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .section2 {
     display: flex;
+    flex: 0.5;
     margin: 10px;
     justify-content: center;
+    width: 100%;
 }
 
 .socialMedia {
@@ -92,6 +96,10 @@ footer {
     text-align: center;
     align-items: center;
     color: white;
+
+    width: 100%;
+    position: fixed;
+    bottom: 0;
 }
 
 .titulo {    
@@ -118,5 +126,53 @@ footer {
         opacity: 1;
         transform: translateY(0);
     }
-}   
+}
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    justify-items: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.grid-item{
+    position: relative;
+}
+
+.grid-item img {
+    max-width: 99%; /* Ajusta o tamanho máximo da imagem */
+    height: 300px; /* Mantém a proporção da imagem */
+    border: 5px solid #002D3D;
+    display: block;
+    opacity:1;
+}
+
+    .grid-wrapper {
+        width: auto;
+        margin-top: 40px;
+        margin-bottom: 100px;
+    }
+
+.texto-no-meio {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    text-align: justify;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box; /* Considera o padding e a borda no cálculo do tamanho */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(255,255,255,0);
+}
+
+    .texto-no-meio:hover {
+        border: 5px solid #9F2226;
+        font-size: 25px;
+        background-color: rgba(0,0,0,0.8);
+        color: white;
+    }
