--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ footer {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
-    text-align: justify;
+    text-align: left;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
